# Simple_Url_Shortener

./: Cargo.toml  LICENSE  README.md
src/: main.rs  models.rs
src/handlers/: auth.rs  links.rs  mod.rs
